--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
       navigator.serviceWorker.register('./service-worker.js').then(function() { console.log('Service Worker Refistered'); });
     }
   </script>
-  <title>github pages test</title>
+  <title>Hello PWA.</title>
+  <style>
+    body {
+      text-aline: center;
+      font-size: 40px;
+      vertical-align: middle;
+    }
+    .image {
+      width: 80%;
+      margin: auto;
+      display: block;
+    }
+  </style>
 </head>
 <body>
-  <h1>github pages test</h1>
+  <h1>Hello PWA.</h1>
+  <img src="./pwa-logo.svg" alt="PWA logo" class="image" />
+  <a href="p.html">p.html</a>
 </body>
 </html>
